--- a/spec-ee/kong-api-tests/.env.example
+++ b/spec-ee/kong-api-tests/.env.example
@@ -32,5 +32,8 @@ TEST_ENV=dev
 # password for konnect gateway user - the main static user which creates Orgs and other resources in Konnect
 KONNECT_USER_PASSWORD=
 
+# Appdynamics password for running the appd test
+APPD_PASSWORD=
+
 # Konnect data plane docker image, default is kong/kong-gateway-dev:nightly-ubuntu
 KONNECT_DP_IMAGE='kong/kong-gateway-dev:nightly-ubuntu'
