--- a/.github/workflows/gateway-api-tests.yml
+++ b/.github/workflows/gateway-api-tests.yml
@@ -132,11 +132,13 @@ jobs:
           PROMETHEUS: true
           WASM: true
           AZURE_VAULT: true
+          APP_D: true
           AZURE_TENANT_ID: ${{ secrets.TEST_API_AZURE_TENANT_ID }}
           AZURE_CLIENT_ID: ${{ secrets.TEST_API_AZURE_CLIENT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.TEST_API_AZURE_CLIENT_SECRET }}
           # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image or non-smoke tests
           CUSTOM_PLUGIN: ${{ (endsWith(env.GW_IMAGE, 'amazonlinux-2') || env.RUN_SPEC == 'non-smoke') && 'false' || 'true' }}
+          APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
 
       - name: Logs from Gateway Start
         if: failure()
@@ -168,6 +170,8 @@ jobs:
           fi
         env:
           AZURE_FUNCTION_KEY: ${{ secrets.TEST_API_AZURE_FUNCTION_KEY }}
+          APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
+
 
       - uses: datadog/junit-upload-github-action@056dec14f19687cd7d1e97f2009df81f8e64d621 # v1.2.0
         continue-on-error: true
