--- a/changelog/unreleased/kong/speed_up_router.yml
+++ b/changelog/unreleased/kong/speed_up_router.yml
@@ -1,3 +1,3 @@
-message: Speed up the router matching when the `router_flavor` is `traditional_compatible` or `expressions`.
+message: Speeded up the router matching when the `router_flavor` is `traditional_compatible` or `expressions`.
 type: performance
 scope: Performance
