--- a/changelog/unreleased/kong/traditional_router_header_validation.yml
+++ b/changelog/unreleased/kong/traditional_router_header_validation.yml
@@ -1,3 +1,3 @@
-message: Regex header values in traditional router are now validated.
+message: Fix issue where a regex header value would not be validated if the `traditional` or `traditional_compatible` router flavors were in use.
 type: bugfix
 scope: Core
