--- a/changelog/unreleased/kong/refactor_dns_client.yml
+++ b/changelog/unreleased/kong/refactor_dns_client.yml
@@ -1,8 +1,8 @@
 message: >
-  Refactor and implement a new DNS client library
-  1. Utilize mlcache as the DNS record cache
-  2. Introduce observable statistics and admin API `/dns` to retrieve them
-  3. Introduce the `legacy_dns_client` option to toggle whether to use the new library
-  4. Deprecate the `dns_no_sync` option; it always uses synchronous queries
+  Starting from this version, a new DNS client library has been implemented and added into Kong. The new DNS client library has the following changes
+  - The new library now leverages `lua-resty-mlcache` for DNS record caching.
+  - Introduced observable statistics for the new DNS client, and a new Admin API `/dns` to retrieve them.
+  - Introduced a new option `legacy_dns_client` to toggle whether to use the new DNS client library.
+  - Deprecated the `dns_no_sync` option in the context of the new DNS client library. With the new library, DNS queries will always be executed synchronously. The `dns_no_sync` option remains functional with the legacy DNS client library.
 type: feature
 scope: Core
