--- a/changelog/unreleased/kong/fix-mlcache-renew-lock-leaks.yml
+++ b/changelog/unreleased/kong/fix-mlcache-renew-lock-leaks.yml
@@ -1,5 +1,4 @@
 message: |
-  Fixed an issue where the lock isn't released upon exiting the mlcache:renew
-  function.
+  Fixed an issue that leaking locks in the internal caching logic
 type: bugfix
 scope: Core
