--- a/changelog/unreleased/kong/bump-lua-kong-nginx-module.yml
+++ b/changelog/unreleased/kong/bump-lua-kong-nginx-module.yml
@@ -1,3 +1,3 @@
-message: "Bumped lua-kong-nginx-module to 0.9.0"
+message: "Bumped lua-kong-nginx-module from 0.8.0 to 0.9.1"
 type: dependency
 scope: Core
