Fix autodocs github action

--- a/.github/workflows/autodocs.yml
+++ b/.github/workflows/autodocs.yml
@@ -16,74 +16,50 @@ on:
         description: "Ignore the build cache and build dependencies from scratch"
         type: boolean
         default: false
+env:
+  BUILD_ROOT: ${{ github.workspace }}/bazel-bin/build
+  BUILD_NAME: kong-dev-normal
+  BUILD_NAME_NORMAL: kong-dev-normal
+
 jobs:
   build:
-    name: Build dependencies
-    runs-on: ${{ vars.RUNS_ON }}
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
+    with:
+      relative-build-root: bazel-bin/build
+      label: normal
+      build-name: ${{ env.BUILD_NAME }}
+      aarch64: false
 
-    env:
-      DOWNLOAD_ROOT: $HOME/download-root
-
-    steps:
-      - name: Set environment variables
-        run: |
-          echo "INSTALL_ROOT=$HOME/install-root" >> $GITHUB_ENV
-          echo "DOWNLOAD_ROOT=$HOME/download-root" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=$INSTALL_ROOT/openssl/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-
-      - name: Checkout Kong source code
-        uses: actions/checkout@v3
-
-      - name: Lookup build cache
-        uses: actions/cache@v3
-        id: cache-deps
-        with:
-          path: ${{ env.INSTALL_ROOT }}
-          key: ${{ hashFiles('.ci/setup_env_github.sh') }}-${{ hashFiles('.requirements') }}-${{ hashFiles('kong-*.rockspec') }}
-
-      - name: Checkout kong-build-tools
-        if: steps.cache-deps.outputs.cache-hit != 'true' || github.event.inputs.force_build == 'true'
-        uses: actions/checkout@v3
-        with:
-          repository: Kong/kong-build-tools
-          path: kong-build-tools
-          ref: master
-
-      - name: Checkout go-pluginserver
-        if: steps.cache-deps.outputs.cache-hit != 'true' || github.event.inputs.force_build == 'true'
-        uses: actions/checkout@v3
-        with:
-          repository: Kong/go-pluginserver
-          path: go-pluginserver
-
-      - name: Add to Path
-        if: steps.cache-deps.outputs.cache-hit != 'true' || github.event.inputs.force_build == 'true'
-        run: echo "$INSTALL_ROOT/openssl/bin:$INSTALL_ROOT/openresty/nginx/sbin:$INSTALL_ROOT/openresty/bin:$INSTALL_ROOT/luarocks/bin:$GITHUB_WORKSPACE/kong-build-tools/openresty-build-tools" >> $GITHUB_PATH
-
-      - name: Install packages
-        if: steps.cache-deps.outputs.cache-hit != 'true' || github.event.inputs.force_build == 'true'
-        run: sudo apt update && sudo apt install libyaml-dev valgrind
-
-      - name: Build Kong dependencies
-        if: steps.cache-deps.outputs.cache-hit != 'true' || github.event.inputs.force_build == 'true'
-        run: |
-          source .ci/setup_env_github.sh
-          make dev
   autodoc:
-    runs-on: ${{ vars.RUNS_ON }}
-    needs: [build]
+    runs-on: ubuntu-latest-kong
+    needs: build
     steps:
-      - name: Set environment variables
-        run: |
-          echo "INSTALL_ROOT=$HOME/install-root" >> $GITHUB_ENV
-          echo "DOWNLOAD_ROOT=$HOME/download-root" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=$INSTALL_ROOT/openssl/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+      - name: Install packages
+        run: sudo apt update && sudo apt install -y libyaml-dev valgrind libprotobuf-dev libpam-dev jq httpie
 
       - name: Checkout Kong source code
         uses: actions/checkout@v3
         with:
           path: kong
           ref: ${{ github.event.inputs.source_branch }}
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-normal
+          path: .
+
+      - name: Extract the artifact contents
+        run: |
+          sudo tar -C /usr/local/ -xzvf artifacts/build-${{ env.BUILD_NAME_NORMAL }}.tar.gz
+          sudo mkdir -p ${{ env.BUILD_ROOT }}/${{ env.BUILD_NAME_NORMAL }}
+          sudo tar -C ${{ env.BUILD_ROOT }}/${{ env.BUILD_NAME_NORMAL }} -xzvf artifacts/build-${{ env.BUILD_NAME_NORMAL }}.tar.gz
+
+      - name: Install Kong dev
+        env:
+          GITHUB_TOKEN: ${{ secrets.GHA_KONG_BOT_READ_TOKEN }}
+        run: make dev LIBRARY_PREFIX=/usr/local/kong
 
       - name: Checkout Kong Docs
         uses: actions/checkout@v3
@@ -93,20 +69,10 @@ jobs:
           token: ${{ secrets.GHA_KONG_BOT_READ_TOKEN }}
           ref: ${{ github.event.inputs.target_branch }}
 
-      - name: Lookup build cache
-        uses: actions/cache@v3
-        id: cache-deps
-        with:
-          path: ${{ env.INSTALL_ROOT }}
-          key: ${{ hashFiles('kong/.ci/setup_env_github.sh') }}-${{ hashFiles('kong/.requirements') }}-${{ hashFiles('kong/kong-*.rockspec') }}
-
-      - name: Add to Path
-        run: echo "$INSTALL_ROOT/openssl/bin:$INSTALL_ROOT/openresty/nginx/sbin:$INSTALL_ROOT/openresty/bin:$INSTALL_ROOT/luarocks/bin:$GITHUB_WORKSPACE/kong-build-tools/openresty-build-tools:$INSTALL_ROOT/go-pluginserver" >> $GITHUB_PATH
-
       - name: Run Autodocs
         run: |
           cd kong
-          eval `luarocks path`
+          source ${{ env.BUILD_ROOT }}/${{ env.BUILD_NAME_NORMAL }}-venv.sh
           scripts/autodoc ../docs.konghq.com ${{ github.event.inputs.version }}
 
       - name: Generate branch name
