tests(ci): restore some tests / steps in ci workflows
* restore the spec-ee unit tests with normal build (currently only run
for the fips build)

* restore the step that produces the core dump when tests fail

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -347,6 +347,17 @@ jobs:
           - 8200:8200
 
     steps:
+    - name: Set up core dumps
+      run: |
+        if [[ $ENABLE_COREDUMP_DEBUG = true ]]; then
+          ulimit -c unlimited
+          mkdir -p /tmp/cores
+          chmod 777 /tmp/cores
+          echo '/tmp/cores/core.%e.%p' | sudo tee /proc/sys/kernel/core_pattern
+          sudo sysctl -w fs.suid_dumpable=2
+          sudo sysctl -p
+        fi
+
     - name: Bump max open files
       run: |
           sudo echo 'kong soft nofile 65536' | sudo tee -a /etc/security/limits.d/kong-ci.conf
@@ -610,6 +621,17 @@ jobs:
     needs: build
 
     steps:
+    - name: Set up core dumps
+      run: |
+        if [[ $ENABLE_COREDUMP_DEBUG = true ]]; then
+          ulimit -c unlimited
+          mkdir -p /tmp/cores
+          chmod 777 /tmp/cores
+          echo '/tmp/cores/core.%e.%p' | sudo tee /proc/sys/kernel/core_pattern
+          sudo sysctl -w fs.suid_dumpable=2
+          sudo sysctl -p
+        fi
+
     - name: Bump max open files
       run: |
           sudo echo 'kong soft nofile 65536' | sudo tee -a /etc/security/limits.d/kong-ci.conf
