chore(redis): remove timeout from schema
Timeout option should've been removed with 3.0 version.
Unfortunately we've missed that removal so we need to keep
it to maintain backwards compatiblity. However this option should
not exist in schema but as a shorthand field to be consistent
with the way we deprecate fields in 3.x versions.

KAG-3947

--- a/scripts/upgrade-tests/docker-compose.yml
+++ b/scripts/upgrade-tests/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       KONG_PG_HOST: localhost
       KONG_TEST_PG_HOST: localhost
+      KONG_PLUGINS: ${KONG_PLUGINS:-bundled}
     volumes:
       - ../../worktree/${OLD_KONG_VERSION}:/kong
     restart: on-failure
