chore: label-schema to include pr title in the footer of the slack message

--- a/.github/workflows/label-schema.yml
+++ b/.github/workflows/label-schema.yml
@@ -12,3 +12,4 @@ jobs:
       continue-on-error: true
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_SCHEMA_CHANGE }}
+        SLACK_FOOTER: ${{ github.event.pull_request.title }}
